Fixed overflow in Chrome.

--- a/css/style.css
+++ b/css/style.css
@@ -185,14 +185,17 @@ a, a:link, a:visited {
 @media (min-width: 1025px) {
   .gallery .gallery__list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(23em, 1fr));
-    grid-template-rows: repeat(41em);
+    grid-template-columns: repeat(auto-fit, minmax(18em, 1fr));
+    grid-auto-rows: 32em;
     gap: .5rem;
     grid-auto-flow: dense; }
+  .gallery li {
+    max-width: 100%;
+    max-height: 100%; }
   .gallery li:nth-child(3n) {
     grid-column: span 2;
     grid-row: span 2; }
-  .gallery li:nth-last-child(-n+8) {
+  .gallery li:nth-last-child(-n+4) {
     grid-column: span 1;
     grid-row: span 1; }
   .gallery figure {
@@ -205,9 +208,9 @@ a, a:link, a:visited {
 @media (min-width: 0px) and (max-width: 1024px) {
   .gallery .gallery__list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(12em, 1fr));
-    grid-template-rows: repeat(21em);
-    gap: .25rem;
+    grid-template-columns: repeat(auto-fit, minmax(18em, 1fr));
+    grid-auto-rows: 32em;
+    gap: .5rem;
     grid-auto-flow: dense; }
   .gallery li:nth-child(4n) {
     grid-column: span 2;
@@ -225,7 +228,7 @@ a, a:link, a:visited {
 @media all and (min-width: 1025px) {
   .about-container {
     display: flex;
-    margin: 5rem 20rem 5rem 20rem; }
+    margin: 5rem 20rem 6rem 20rem; }
     .about-container img {
       border-radius: 2rem;
       width: 100%; }
@@ -268,7 +271,7 @@ a, a:link, a:visited {
     .collaborations li {
       padding-top: .25rem; }
   .footer {
-    margin-top: 3rem; } }
+    margin-top: 4rem; } }
 
 @media all and (min-width: 768px) and (max-width: 1024px) {
   .about-right {
