--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -4,10 +4,15 @@
 
     .gallery__list {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(23em, 1fr));
-      grid-template-rows: repeat(41em);
+      grid-template-columns: repeat(auto-fit, minmax(18em, 1fr));
+      grid-auto-rows: 32em;
       gap: .5rem;
       grid-auto-flow: dense;
+    }
+
+    li {
+      max-width: 100%;
+      max-height: 100%;
     }
 
     li:nth-child(3n) {
@@ -15,7 +20,7 @@
       grid-row: span 2;
     }
 
-    li:nth-last-child(-n+8) {
+    li:nth-last-child(-n+4) {
       grid-column: span 1;
       grid-row: span 1;
     }
@@ -37,9 +42,9 @@
 
     .gallery__list {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(12em, 1fr));
-      grid-template-rows: repeat(21em);
-      gap: .25rem;
+      grid-template-columns: repeat(auto-fit, minmax(18em, 1fr));
+      grid-auto-rows: 32em;
+      gap: .5rem;
       grid-auto-flow: dense;
     }
 
