--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -3,7 +3,7 @@
     .about {
         &-container {
             display: flex;
-            margin: 5rem 20rem 5rem 20rem;
+            margin: 5rem 20rem 6rem 20rem;
 
             img {
                 border-radius: 2rem;
@@ -81,7 +81,7 @@
     }
 
     .footer {
-        margin-top: 3rem;
+        margin-top: 4rem;
     }
 }
 
